# python-project-49

./: Makefile  README.md  pyproject.toml
brain_games/: engine.py  services.py
brain_games/games/: calc.py  even.py  launcher.py  nod.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_is_prime.py  brain_launcher.py  brain_nod.py  brain_prime.py  brain_progression.py
