[tool.poetry]
name = "hexlet-code"
version = "1.0.0"
description = "A collection of educational brain games."
authors = ["Fizikaman <fizikaman26@gmail.com>"]
repository = "https://github.com/Fizikaman/hexlet-code"
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
asciinema = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-nod = "brain_games.scripts.brain_nod:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-is-prime = "brain_games.scripts.brain_is_prime:main"
brain-launcher = "brain_games.scripts.brain_launcher:main"
